added delete for ch7

--- a/libraryapp/templates/books/detail.html
+++ b/libraryapp/templates/books/detail.html
@@ -12,4 +12,9 @@
     <div>Published in {{ book.year_published }}</div>
     <div>ISBN: {{ book.isbn }}</div>
   </body>
+  <form action="{% url 'libraryapp:book' book.id %}" method="POST">
+    {% csrf_token %}
+    <input type="hidden" name="actual_method" value="DELETE">
+    <button>Delete</button>
+</form>
 </html>
