added base templates to templates

--- a/libraryapp/templates/librarians/list.html
+++ b/libraryapp/templates/librarians/list.html
@@ -1,11 +1,10 @@
+{% extends 'shared/base.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Library</title>
-  </head>
+
   <body>
+  {% block content %}
     <h1>Librarians</h1>
 
     <ol>
@@ -13,5 +12,6 @@
         <li>{{ librarian.first_name }} {{ librarian.last_name }}</li>
     {% endfor %}
     </ol>
+    {% endblock %}
   </body>
 </html>
