--- a/libraryapp/templates/books/detail.html
+++ b/libraryapp/templates/books/detail.html
@@ -1,14 +1,10 @@
+{% extends 'shared/base.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <title>Library</title>
-</head>
-
 <body>
-
+    {% block content %}
     <section id="book-details">
         <h1>{{ book.title }}</h1>
         <h2>By {{ book.author }}</h2>
@@ -29,7 +25,7 @@
             <button>Edit</button>
         </form>
     </section>
-
+    {% endblock %}
 </body>
 
 </html>
