--- a/libraryapp/templates/books/form.html
+++ b/libraryapp/templates/books/form.html
@@ -1,13 +1,10 @@
+{% extends 'shared/base.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <title>Library</title>
-</head>
-
 <body>
+    {% block content %}
     <h1>Inventory Book</h1>
 
     {% if book.id is not None %}
@@ -50,6 +47,8 @@
         {% endif %}
 
     </form>
+    {% endblock %}
+
 </body>
 
 </html>
