--- a/libraryapp/templates/books/list.html
+++ b/libraryapp/templates/books/list.html
@@ -1,11 +1,10 @@
+{% extends 'shared/base.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Library</title>
-  </head>
+
   <body>
+    {% block content %}
     <h1>Books</h1>
 
     <ol>
@@ -16,5 +15,6 @@
         </li>
     {% endfor %}
     </ol>
+    {% endblock %}
   </body>
 </html>
