--- a/libraryapp/templates/libraries/detail.html
+++ b/libraryapp/templates/libraries/detail.html
@@ -1,12 +1,15 @@
+{% extends 'shared/base.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Library</title>
-  </head>
+  
   <body>
+  
+    {% block content %}
+
     <h1>{{ library.title }}</h1>
     <h2>at {{ library.address }}</h2>
+    {% endblock %}
+
   </body>
 </html>
