--- a/libraryapp/templates/libraries/form.html
+++ b/libraryapp/templates/libraries/form.html
@@ -1,11 +1,10 @@
+{% extends 'shared/base.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Bangazon</title>
-  </head>
+
   <body>
+    {% block content %}
     <h1>Build Library</h1>
 
 
@@ -21,5 +20,6 @@
       </fieldset>
       <input type="submit" value="Add It" />
     </form>
+    {% endblock %}
   </body>
 </html>
