--- a/libraryapp/templates/libraries/list.html
+++ b/libraryapp/templates/libraries/list.html
@@ -1,11 +1,10 @@
+{% extends 'shared/base.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Library</title>
-  </head>
+  
   <body>
+  {% block content %}
     <h1>Libraries</h1>
 
     <ol>
@@ -15,5 +14,6 @@
         </li>
     {% endfor %}
     </ol>
+  {% endblock %}
   </body>
 </html>
